Wrapping fixed and option added

--- a/framework/public/stylesheets/style.css
+++ b/framework/public/stylesheets/style.css
@@ -53,7 +53,7 @@ html {
 
 	/* Display */
 	margin-top: 0px;
-	height: 40px;
+	height: 60px;
 
 	/* Colour */
 	background-color: #ADADAD;
@@ -112,8 +112,12 @@ html {
 }
 
 .countText {
-
 	font-family:"Arial", sans-serif;
 	text-decoration: none;
 	color: #FFFFFF;
+}
+
+#chkboxWrap {
+	margin-top: 8px;
+	margin-left: 8px;
 }
